--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,14 +30,14 @@
 
 // Palette.
 	$palette: (
-		bg:					#242943,
-		bg-alt:				#2a2f4a,
-		fg:					#ffffff,
-		fg-bold:			#ffffff,
-		fg-light:			rgba(244,244,255,0.2),
-		border:				rgba(212,212,255,0.1),
-		border-bg:			rgba(212,212,255,0.035),
-		highlight:			#9bf1ff,
+		bg:					#87c5a4,
+		bg-alt:				#d5ffe9,
+		fg:					#000000,
+		fg-bold:			#000000,
+		fg-light:			rgba(244,244,255,0.8),
+		border:				rgba(212,255,212,0.1),
+		border-bg:			rgba(212,255,212,0.035),
+		highlight:			#ffffff,
 		accent1:			#6fc3df,
 		accent2:			#8d82c4,
 		accent3:			#ec8d81,
