fixed 'join us' buttons, people layout, and recruitment messages

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Join us</a></li>
+                    <li><a href="#two" class="button special fit">Join us</a></li>
                 </ul>
             </div>
         </div>
@@ -37,11 +37,11 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>Massa libero</h2>
+                    <h2>We are recruiting!</h2>
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Join us</a></li>
+                    <li><a href="mailto:jchiou@gate.sinica.edu.tw" class="button icon fa-paper-plane">Send CV</a></li>
                 </ul>
             </div>
         </section>
