--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,6 @@
 		{% endfor %}
 	</ul>
 	<ul class="actions vertical">
-		<li><a href="#" class="button special fit">Join us</a></li>
+		<li><a href="index.html#two" class="button special fit">Join us</a></li>
 	</ul>
 </nav>
