finished publications page

--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					#87c5a4,
+		bg:					#e7ea8d,
 		bg-alt:				#d5ffe9,
 		fg:					#000000,
 		fg-bold:			#000000,
