--- a/_sass/layout/_banner.scss
+++ b/_sass/layout/_banner.scss
@@ -8,7 +8,7 @@
 
 	#banner {
 		@include vendor('align-items', 'center');
-		@include vendor('background-image', 'url("../videos/banner_bacillus.mp4")');
+		@include vendor('background-image', 'url("../images/banner_bacillus_slow.gif")');
 		@include vendor('display', 'flex');
 		@include padding(4em, 0, (2em, 0, 0, 0));
 		background-attachment: fixed;
