--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -37,7 +37,7 @@
         <section id="two">
             <div class="inner">
                 <header class="major">
-                    <h2>We are recruiting!</h2>
+                    <h2>The Chiou lab is recruiting!</h2>
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
